[package]
name = "chiselstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-notify = "0.2.0"
async-trait = "0.1.52"
async-mutex = "1.4.0"
crossbeam-channel = "0.5.1"
crossbeam = "0.8.1"
derivative = "2.2.0"
#little_raft = {git = "https://github.com/login256/little-raft", rev = "2447185"}
little_raft = {path = "/Users/lyt/Project/MadFS/little-raft/little_raft"}
prost = "0.10.0"
sqlite = "0.26.0"
thiserror = "1.0.30"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
nix = "0.24.1"
log = "0.4.17"
madsim = { git = "https://github.com/madsys-dev/madsim.git", rev = "f4972ea" }
tokio = { git = "https://github.com/madsys-dev/madsim.git", rev = "f4972ea", package = "madsim-tokio", features=["full"] }
tonic = { git = "https://github.com/madsys-dev/madsim.git", rev = "f4972ea", package = "madsim-tonic" }
#madsim = { version = "=0.2.0-alpha.3", features=["macros"]}
#tokio = { version = "=0.2.0-alpha.3", package = "madsim-tokio", features=["full", "macros"] }
#tonic = { version = "=0.2.0-alpha.3", package = "madsim-tonic" }


[build-dependencies]
tonic-build = { version = "=0.2.0-alpha.1", package = "madsim-tonic-build" }

[dev-dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
structopt = "0.3.25"
