[package]
name = "madfs_raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-notify = "0.2.0"
async-trait = "0.1.52"
async-mutex = "1.4.0"
crossbeam-channel = "0.5.1"
crossbeam = "0.8.1"
derivative = "2.2.0"
#little_raft = {git = "https://github.com/login256/little-raft", branch = "try_async"}
little_raft = {path = "../little-raft/little_raft"}
prost = "0.11"
sqlite = "0.27.0"
thiserror = "1.0.30"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
nix = "0.24.1"
log = "0.4.17"
log-derive = "0.4.1"
env_logger = "0.9.1"
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features=["full"] }
tonic = { version = "0.2", package = "madsim-tonic" }
futures = "0.3"
tempfile = "3.3.0"
serde_bytes = "0.11.7"
sqlite3-sys = "0.14.0"


[build-dependencies]
tonic-build = { version = "0.2", package = "madsim-tonic-build" }
prost-build = "0.11"

[dev-dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
structopt = "0.3.25"
